...
    @ObservedObject var bookingsViewModel: BookingsViewModel

    var body: some View {
        TabView {
            FeedView(viewModel: feedViewModel)
                .tabItem {
                    Label("Feed", systemImage: "newspaper.fill")
                }

            ClassListView(viewModel: classViewModel)
                .tabItem {
                    Label("Classes", systemImage: "figure.run")
                }
...
